fixed excerpt spacing + thumbnail link height

--- a/css/media.css
+++ b/css/media.css
@@ -9,4 +9,9 @@ figure {
 /* thumbnail */
 .entryThumbnail {
     display: inline-block;
+    margin: 5px 15px 5px 0;
+}
+
+.thumbnailLink {
+    display: block;
 }
